create basis styles

--- a/src/lib/timeline.scss
+++ b/src/lib/timeline.scss
@@ -2,6 +2,7 @@
   display: grid;
   grid-template-columns: max-content 12px 1fr;
   justify-content: stretch;
+  padding: 1em;
   /*max-width: 210mm;*/
   -webkit-print-color-adjust: exact !important;
 }
